Style fixes for message readability in match view

--- a/public/style.css
+++ b/public/style.css
@@ -82,7 +82,7 @@ tr.fixture-own { font-weight: bold; }
 .inbox-message-body { margin-top: 10px; }
 
 .match-event-message {
-	font-size: 180%;
+	font-size: 200%;
 	font-weight: bold;
 }
 
